--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,27 @@
 
 body {
   background-color: rgb(23, 21, 21);
+  /* background-color: #333333; */
+
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #121212;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #242424;
+}
+
 
 @layer components {
 	.bg-glass {
