--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
 
 
 body {
-  background-color: #EAEBED;
-  
-
+  background-color: #e1e8f6;
+  /* background: linear-gradient(to bottom, white 0%, #cedfff 100%); */
 }
 
 ::-webkit-scrollbar {
